# video-processing-system

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __main__.py  app.py  consumer.py  producer.py  settings.py
docker-compose-files/: redis-test-capturing.yml  redis-test.yml  sample-test-capturing.yml  sample-test-nginx.yml  sample-test.yml
frontend/: .dockerignore  .eslintrc  Dockerfile  nginx.conf  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  store.ts
frontend/src/components/HlsPlayer/: HlsPlayer.tsx  index.ts
kafka-setup/: single-kafka-cluster.yml
video-capture-service/: .env.example  .gitignore  Dockerfile  README.md  capture.py  capture_parallel.py  configuration.py  main.py  preprocess_frames_functions.py  pyproject.toml
video-capture-service/ReconnectingRTSPGear/: ReconnectingRTSPGear.py
video-capture-service/scripts/: docker-entrypoint.sh
video-processing-service/: process_frames.py  pyproject.toml  test_nn.py
video-processing-service/models/: model_structure.py
video-processing-service/video_transform/: video_tranform.py
video-stream-service/: .dockerignore  Dockerfile  pyproject.toml  stream_parallel.py
video-stream-service/ReconnectingRTSPGear/: ReconnectingRTSPGear.py
video-stream-service/scripts/: docker-entrypoint.sh
video-stream-service/streams/: streams.json
violence-neuroservice/: .env  Dockerfile  pyproject.toml
violence-neuroservice/app/: __main__.py  app.py  app_redis.py  main.py  redis_pipeline.py  settings.py
violence-neuroservice/app/neural_networks/mobile_net_pretrained/: model_structure.py
violence-neuroservice/app/neural_networks/test_model/: model_structure.py
violence-neuroservice/app/neural_networks/video_transform/: video_tranform.py
violence-neuroservice/app/neural_networks/violence_detection_3dcnn/: model_structure.py  weights.h5
violence-neuroservice/app/neural_networks/violence_detection_cnn_lstm/: model_structure.py
violence-neuroservice/app/neural_networks/violence_recognition/: model_structure.py  weights.h5
violence-neuroservice/models/: model_structure.py  weights.h5
violence-neuroservice/nginx-balancer/: nginx.conf
violence-neuroservice/redis_app_docker_files/: redis_app.Dockerfile  redis_model.Dockerfile
violence-neuroservice/tests/: README.md  locustfile_cnn2d.py  locustfile_cnn3d.py  locustfile_cnn_ltsm.py  utils.py
violence-neuroservice/video_transform/: video_tranform.py
