[tool.poetry]
name = "video-capture-service"
version = "0.1.0"
description = ""
authors = ["garet2gis <br-avm32@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
confluent-kafka = "^1.8.2"
pydantic = "^1.9.0"
opencv-python = "^4.5.5"
vidgear = {extras = ["core"], version = "^0.2.5"}
python-dotenv = "^0.20.0"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
