[tool.poetry]
name = "video-processing-service"
version = "0.1.0"
description = ""
authors = ["garet2gis <br-avm32@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
vidgear = {extras = ["asyncio"], version = "^0.2.5"}
opencv-python = "^4.5.5"
tensorflow-metal = "^0.4.0"
tensorflow-macos = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
